--- a/.github/workflows/provision_ec2.yml
+++ b/.github/workflows/provision_ec2.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           mkdir ~p ~/.ssh
           echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/ec2_key.pem
-          chmode 600 ~/.ssh/ec2_key.pem
+          chmod 600 ~/.ssh/ec2_key.pem
           
       - name: Debug SSH key
         run: ls -l ~/.ssh/ec2_key.pem
