--- a/ansible/playbooks/provision_and_configure_server.yml
+++ b/ansible/playbooks/provision_and_configure_server.yml
@@ -29,3 +29,42 @@
         count: 1
         security_group: "{{ security_group.group_id }}"
       register: ec2
+
+    - name: Wait for instance to be ready
+      wait_for:
+        host: "{{ ec2.instance[0].public_dns_name }}"
+        port: 22
+        delay: 30
+        timeout: 300
+        state: started
+      when: ec2.instance is defined and ec2.instances | length > 0
+    - name: Add Ec2 instance to inventory dynamically
+      add_host:
+        name: "{{ec2.instances[0].public_dns_name}}"
+        groups: magic_hosts
+        ansible_ssh_private_key_file: "{{ ec2_ssh_key_file }}"
+        ansible_user: ec2-user
+
+    - name: Debug SSH key path
+      Debug:
+        var: ec2_ssh_key_file
+    
+    - name: Debug dynamic inventory
+      Debug:
+        var: groups['magic_hosts']
+
+    - name: Install common packages
+      become: yes
+      package:
+        name:
+          - httpd
+          - nodejs
+          - npm
+        state: present
+  
+    - name: Start and enable ensible
+      become: yes
+      service:
+        name: httpd
+        state: started
+        enabled: yes
