--- a/ansible/playbooks/provision_and_configure_server.yml
+++ b/ansible/playbooks/provision_and_configure_server.yml
@@ -61,6 +61,14 @@
           - nodejs
           - npm
         state: present
+      delegate_to: "{{ item }}"
+      with_items:
+        - "{{ groups['magic_hosts'] }}"
+      vars:
+        ansible_ssh_private_key_file: "{{ ec2_ssh_key_file }}"
+        ansible_user: ec2-user
+      when: groups["magic_hosts"] is defined and groups["magic_hosts"] | length >0
+
   
     - name: Start and enable ensible
       become: yes
@@ -68,3 +76,10 @@
         name: httpd
         state: started
         enabled: yes
+      delegate_to: "{{ item }}"
+      with_items:
+        - "{{ groups['magic_hosts'] }}"
+      vars:
+        ansible_ssh_private_key_file: "{{ ec2_ssh_key_file }}"
+        ansible_user: ec2-user
+      when: groups["magic_hosts"] is defined and groups["magic_hosts"] | length >0
