Invoking playbook into pipeline

--- a/ansible/playbooks/provision_and_configure_server.yml
+++ b/ansible/playbooks/provision_and_configure_server.yml
@@ -56,10 +56,7 @@
     - name: Install common packages
       become: yes
       package:
-        name:
-          - httpd
-          - nodejs
-          - npm
+        name: httpd
         state: present
       delegate_to: "{{ item }}"
       with_items:
